spec/test/parser/valid/modifiers/protected_constructors.java
protected class A {
  protected A() {}
}

