spec/test/parser/invalid/class_structure/unicode_input.java
protected class A {
  final String x = "ᚪᚾᛁᛣᚩᛞᛖ";
}

